--- a/godot-tactical-rpg/.vscode/settings.json
+++ b/godot-tactical-rpg/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\dmull\\OneDrive\\Documents\\Godot 4.3\\Godot_v4.3-stable_win64.exe"
+    "godotTools.editorPath.godot4": "c:\\Users\\danieljones\\Documents\\Godot 4.3\\Godot_v4.3-stable_win64.exe"
 }
